# textcounter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/textcounter/: __init__.py  analyzer.py  cli.py  counter.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_counter.py
