[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textcounter"
version = "1.0.0"
description = "A powerful text analysis library for counting characters, words, and performing data analysis on text"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Karim Galal", email = "kg1606@gmail.com"}
]
maintainers = [
    {name = "Karim Galal", email = "kg1606@gmail.com"}
]
keywords = [
    "text",
    "counter",
    "character",
    "word",
    "analysis",
    "statistics",
    "nlp",
    "text-processing"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/kimo26/textcounter"
Documentation = "https://github.com/kimo26/textcounter#readme"
Repository = "https://github.com/kimo26/textcounter.git"
Issues = "https://github.com/kimo26/textcounter/issues"
Changelog = "https://github.com/kimo26/textcounter/blob/main/CHANGELOG.md"

[project.scripts]
textcounter = "textcounter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
textcounter = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "N", "B", "C4"]  # "I" removed - isort handles imports
ignore = [
    "F401",   # Allow unused imports for re-exports
    "F841",   # Allow unused variables in tests (exit_code)
    "B007",   # Allow unused loop variables
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=textcounter --cov-report=term-missing"


